# libgrabby

./: CMakeLists.txt  README  test.c
include/: grabby.h
lib/: grabby.c
